# Slim-Markup-Language

./: CMakeLists.txt  example.cpp  sml.sln  sml.vcxproj  sml.vcxproj.filters
src/: CMakeLists.txt  sml.h  smldef.h  smlobj.h  smlparse.h
src/sml/: sml.h  smldef.h  smlobj.h  smlparse.h
test/: example.sml  unittest.vcxproj  unittest.vcxproj.filters
test/src/: example.cpp
tests/: CMakeLists.txt  example.cpp  example.sml
unittest/: example.sml  unittest.sln  unittest.vcxproj
unittest/src/: example.cpp
